--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Psicologia</title>
 </head>
+
 <body>
-    <img src="https://img.elo7.com.br/product/zoom/38997F2/matriz-de-bordado-simbolo-psicologia-matriz-arquitetura.jpg" alt="">
+    <img src="https://img.elo7.com.br/product/zoom/38997F2/matriz-de-bordado-simbolo-psicologia-matriz-arquitetura.jpg"
+        alt="">
+    <h2 class="titulo-centralizado"> Distúrbios de ansiedade </h2>
+    <p>A Psicologia é a ciência que estuda o comportamento e os processos mentais dos seres humanos. Ela procura
+        compreender como as pessoas pensam, sentem, aprendem, se relacionam e se comportam em diferentes contextos.</p>
+
+
+
+
+
+
 </body>
+
 </html>
