--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
+    <a href="./index.html">
     <img src="https://img.elo7.com.br/product/zoom/38997F2/matriz-de-bordado-simbolo-psicologia-matriz-arquitetura.jpg"
         alt="">
+    </a>
     <h2 class="titulo-centralizado"> Distúrbios de ansiedade </h2>
     <p>A Psicologia é a ciência que estuda o comportamento e os processos mentais dos seres humanos. Ela procura
         compreender como as pessoas pensam, sentem, aprendem, se relacionam e se comportam em diferentes contextos.</p>
