--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <h2 class="titulo-centralizado"> Distúrbios de ansiedade </h2>
     <p>A Psicologia é a ciência que estuda o comportamento e os processos mentais dos seres humanos. Ela procura
         compreender como as pessoas pensam, sentem, aprendem, se relacionam e se comportam em diferentes contextos.</p>
+        <li>ajuda o psicologico </li>
+        <li>trabalha nas emoções</li>
+        <li>auxilia nos problemas cotidianos</li>
+        <li>conhecimento sobre si mesmo</li>
+        <li>entender os comportamentos humanos</li>
+        
 
 
 
